# BeastMagneticField

./: CMakeLists.txt  README.md
include/: BeastMagneticField.h  bmfLinkDef.h
scripts/: mfield2eve.C  mfield2eve_C.d  mfield2eve_C_ACLiC_dict_rdict.pcm  viewer.C
source/: BeastMagneticField.cc  main.cc
